--- a/index.html
+++ b/index.html
@@ -20,27 +20,42 @@
                         <a class="nav-link" href="index.html"><i class="ion-home"></i> Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="ion-images"></i> Gallery</a>
+                        <a class="nav-link" href="gallery.html"><i class="ion-images"></i> Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="ion-map"></i> About us</a>
+                        <a class="nav-link" href="info.html"><i class="ion-map"></i> About us</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
 
+        <div id="carouselTest" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-10 w-100" src="images/index1.jpeg" alt="First image">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-10 w-100" src="images/index2.jpeg" alt="Second image">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-10 w-100" src="images/index3.jpg" alt="Third image">
+                </div>
+            </div>
+        </div>
+
+
         <main class="row">
             <section class="col-sm-8">
                 <div class="row">
                     <div class="col">
-                        <h1>This is supposed to be a header.</h1>
+                        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </h1>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dictum, urna id facilisis viverra, ex massa dictum nunc, quis vehicula turpis metus ac nisl. Nullam et ornare justo. In eleifend maximus pellentesque. Donec ornare odio quis pulvinar convallis. Vestibulum eget lacus aliquam, convallis erat tristique, maximus tellus. Morbi et velit mi. Nullam eros lectus, dapibus sed bibendum vitae, cursus a erat. Ut pulvinar justo in laoreet gravida. Phasellus pulvinar blandit magna a hendrerit. Ut auctor imperdiet nibh, nec euismod justo mattis quis. Aenean hendrerit, erat at lacinia viverra, ante augue egestas dolor, bibendum semper risus ligula quis arcu. Maecenas quis orci dictum, bibendum nisi suscipit, gravida velit. Duis eu erat vehicula, fermentum massa eget, sodales massa. Vestibulum a leo tortor. Praesent tincidunt tempor dui eget euismod. Aliquam velit nulla, pharetra in ipsum at, ullamcorper tincidunt elit.</p>
-                        <p>Nunc molestie volutpat lacus, eget aliquet felis finibus sit amet. Etiam venenatis, elit eu scelerisque sollicitudin, ligula metus consectetur felis, vitae interdum orci lorem et dui. Nam blandit, mauris vitae fringilla aliquam, est lectus fringilla orci, in placerat dui diam congue elit. Aliquam erat volutpat. Mauris consequat dolor a dolor dapibus, vel volutpat eros eleifend. Donec tincidunt molestie velit ac scelerisque. Fusce enim urna, efficitur vel nulla vel, interdum iaculis neque. Phasellus vestibulum massa erat, et hendrerit augue dictum et. Vivamus eget mauris iaculis, sodales augue sed, dapibus nunc. Mauris gravida vitae lacus a euismod. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse pulvinar nulla nec velit laoreet pharetra. Pellentesque quam orci, iaculis ut risus quis, porttitor congue neque.</p>
                     </div>
                     <div class="col">
                         <p>Sed auctor turpis sed ex efficitur viverra. Quisque mauris odio, tempus et consectetur vitae, fermentum et ipsum. Pellentesque aliquet tellus pulvinar posuere elementum. Phasellus et ex a massa feugiat tempus. Maecenas gravida, eros ac imperdiet molestie, lacus urna tristique purus, sit amet placerat dolor est non erat. Quisque eu sodales mauris. Aliquam nec justo sed sem vestibulum elementum. Morbi interdum vitae neque sed interdum.</p>
@@ -48,7 +63,10 @@
                 </div>
             </section>
             <aside class="col">
-                <p>Sed auctor turpis sed ex efficitur viverra. Quisque mauris odio, tempus et consectetur vitae, fermentum et ipsum. Pellentesque aliquet tellus pulvinar posuere elementum. Phasellus et ex a massa feugiat tempus. Maecenas gravida, eros ac imperdiet molestie, lacus urna tristique purus, sit amet placerat dolor est non erat. Quisque eu sodales mauris. Aliquam nec justo sed sem vestibulum elementum. Morbi interdum vitae neque sed interdum.</p>
+                <div class="jumbotron">
+                    <h1>Quisque diam sem, suspicit a tincidunt sed</h1>
+                    <p>Sed auctor turpis sed ex efficitur viverra. Quisque mauris odio, tempus et consectetur vitae, fermentum et ipsum. Pellentesque aliquet tellus pulvinar posuere elementum. Phasellus et ex a massa feugiat tempus. Maecenas gravida, eros ac imperdiet molestie, lacus urna tristique purus, sit amet placerat dolor est non erat. Quisque eu sodales mauris. Aliquam nec justo sed sem vestibulum elementum. Morbi interdum vitae neque sed interdum.</p>
+                </div>
             </aside>
         </main>
     </div>
