--- a/gallery.html
+++ b/gallery.html
@@ -2,9 +2,144 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width , initial-scale=1">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html"><i class="ion-coffee"></i> Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html"><i class="ion-home"></i> Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="gallery.html"><i class="ion-images"></i> Gallery<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="info.html"><i class="ion-map"></i> About us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
+        <main class="row">
+            <section class="col-sm-8">
+                <div class="row">
+                    <div class="col">
+                        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </h1>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="card-group">
+                        <div class="card">
+                            <img class="card-img-top" src="images/gallery1.jpg" alt="First cat" height="45%">
+                            <div class="hard-body">
+                                <h5 class="card-title">First card with a cat</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalTest1">Open Image</button>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="images/gallery2.jpg" alt="Second cat" height="45%">
+                            <div class="hard-body">
+                                <h5 class="card-title">Second card with a cat</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalTest2">Open Image</button>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="images/gallery3.png" alt="Third cat" height="45%">
+                            <div class="hard-body">
+                                <h5 class="card-title">Third card with a cat</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalTest3">Open Image</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+            <aside class="col">
+                <div class="jumbotron">
+                    <h1>Quisque diam sem, suspicit a tincidunt sed</h1>
+                    <p>Sed auctor turpis sed ex efficitur viverra. Quisque mauris odio, tempus et consectetur vitae, fermentum et ipsum. Pellentesque aliquet tellus pulvinar posuere elementum. Phasellus et ex a massa feugiat tempus. Maecenas gravida, eros ac imperdiet molestie, lacus urna tristique purus, sit amet placerat dolor est non erat. Quisque eu sodales mauris. Aliquam nec justo sed sem vestibulum elementum. Morbi interdum vitae neque sed interdum.</p>
+                </div>
+            </aside>
+        </main>
+
+        <div class="modal fade" id="modalTest1" tabindex="-1" role="dialog" aria-labelledby="modalTest" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalTestLabel1">This be a cat</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="images/gallery1.jpg" width="100%">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="modalTest2" tabindex="-1" role="dialog" aria-labelledby="modalTest" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalTestLabel2">This be a cat</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="images/gallery2.jpg" width="100%">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="modalTest3" tabindex="-1" role="dialog" aria-labelledby="modalTest" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalTestLabel3">This be a cat</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="images/gallery3.png" width="100%">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+                integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+                integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+                crossorigin="anonymous"></script>
 </body>
 </html>
