--- a/gallery.html
+++ b/gallery.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width , initial-scale=1">
     <title>Title</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bs-custom.css">
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="index.html"><i class="ion-coffee"></i> Logo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html"><i class="ion-home"></i> Home</a>
@@ -40,28 +40,28 @@
 
                 <div class="row">
                     <div class="card-group">
-                        <div class="card">
+                        <div class="card bg-dark">
                             <img class="card-img-top" src="images/gallery1.jpg" alt="First cat" height="45%">
                             <div class="hard-body">
                                 <h5 class="card-title">First card with a cat</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalTest1">Open Image</button>
+                                <button type="button" class="btn btn-lg btn-secondary mx-1" data-toggle="modal" data-target="#modalTest1">Open Image</button>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card bg-dark">
                             <img class="card-img-top" src="images/gallery2.jpg" alt="Second cat" height="45%">
                             <div class="hard-body">
                                 <h5 class="card-title">Second card with a cat</h5>
                                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalTest2">Open Image</button>
+                                <button type="button" class="btn btn-lg btn-secondary mx-1" data-toggle="modal" data-target="#modalTest2">Open Image</button>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card bg-dark">
                             <img class="card-img-top" src="images/gallery3.png" alt="Third cat" height="45%">
                             <div class="hard-body">
                                 <h5 class="card-title">Third card with a cat</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalTest3">Open Image</button>
+                                <button type="button" class="btn btn-lg btn-secondary mx-1" data-toggle="modal" data-target="#modalTest3">Open Image</button>
                             </div>
                         </div>
                     </div>
