--- a/gallery.html
+++ b/gallery.html
@@ -40,28 +40,28 @@
 
                 <div class="row">
                     <div class="card-group">
-                        <div class="card bg-dark">
+                        <div class="card bg-secondary">
                             <img class="card-img-top" src="images/gallery1.jpg" alt="First cat" height="45%">
                             <div class="hard-body">
                                 <h5 class="card-title">First card with a cat</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                <button type="button" class="btn btn-lg btn-secondary mx-1" data-toggle="modal" data-target="#modalTest1">Open Image</button>
+                                <button type="button" class="btn btn-lg btn-dark mx-1" data-toggle="modal" data-target="#modalTest1">Open Image</button>
                             </div>
                         </div>
-                        <div class="card bg-dark">
+                        <div class="card bg-secondary">
                             <img class="card-img-top" src="images/gallery2.jpg" alt="Second cat" height="45%">
                             <div class="hard-body">
                                 <h5 class="card-title">Second card with a cat</h5>
                                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                                <button type="button" class="btn btn-lg btn-secondary mx-1" data-toggle="modal" data-target="#modalTest2">Open Image</button>
+                                <button type="button" class="btn btn-lg btn-dark mx-1" data-toggle="modal" data-target="#modalTest2">Open Image</button>
                             </div>
                         </div>
-                        <div class="card bg-dark">
+                        <div class="card bg-secondary">
                             <img class="card-img-top" src="images/gallery3.png" alt="Third cat" height="45%">
                             <div class="hard-body">
                                 <h5 class="card-title">Third card with a cat</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                                <button type="button" class="btn btn-lg btn-secondary mx-1" data-toggle="modal" data-target="#modalTest3">Open Image</button>
+                                <button type="button" class="btn btn-lg btn-dark mx-1" data-toggle="modal" data-target="#modalTest3">Open Image</button>
                             </div>
                         </div>
                     </div>
